Update image cards with new titles and prices

--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
 
   <div class="images-container">
     <!-- Toutes les cartes -->
-    <div class="image-card glow-Commun" data-title="Noo" data-rarity="Commun" data-price="100" data-bonus="1$/s" data-img="oob.png">
-      <img src="nob.png" alt="Noob">
-      <div class="image-title">Noob</div>
-      <div class="image-price">100 💰</div>
+    <div class="image-card glow-Commun" data-title="Gameurxxx7" data-rarity="Commun" data-price="100M" data-bonus="5M$/s" data-img="Gameurxxx7.png">
+      <img src="Gameurxxx7.png" alt="Gameurxxx7">
+      <div class="image-title">Gameurxxx7</div>
+      <div class="image-price">100M 💰</div>
     </div>
-    <div class="image-card glow-Rare" data-title="Noob Boxeur" data-rarity="Rare" data-price="100000" data-bonus="700$/s" data-img="Boxeur.png">
-      <img src="Boxeur.png" alt="Noob Boxeur">
-      <div class="image-title">Noob Boxeur</div>
-      <div class="image-price">100 000 💰</div>
+    <div class="image-card glow-Rare" data-title="MELBKLIFE" data-rarity="Rare" data-price="100M" data-bonus="5M$/s" data-img="Boxeur.png">
+      <img src="MELBKLIFE.png" alt="MELBKLIFE">
+      <div class="image-title">MELBKLIFE</div>
+      <div class="image-price">100M 💰</div>
     </div>
     <div class="image-card glow-Rare" data-title="Noob Ninja" data-rarity="Rare" data-price="12000" data-bonus="95$/s" data-img="Ninja.PNG">
       <img src="Ninja.PNG" alt="Noob Ninja">
