Update footer text and links in index.html

--- a/index.html
+++ b/index.html
@@ -186,8 +186,7 @@
   </div>
 
   <div class="footer">
-  Développé par Zaynox pour Steal a Noob de DarSya's Creations • © 2025 Steal A Noob
-    https://steal-a-noob.github.io/Steal-A-Noob-status-/
+  Développé par Zaynox pour I AM A COWBOY de Mangeur2nutella2 et MELBKLIFE et Nath_vdk • © 2025 I AM A COWBOY
 </div>
 
   <script src="script.js"></script>
