Change rarity from 'Commun' to 'Secret' for cards

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
   <div class="images-container">
     <!-- Toutes les cartes -->
-    <div class="image-card glow-Commun" data-title="Gameurxxx7" data-rarity="Commun" data-price="100M" data-bonus="5M$/s" data-img="Gameurxxx7.png">
+    <div class="image-card glow-Commun" data-title="Gameurxxx7" data-rarity="Secret" data-price="100M" data-bonus="5M$/s" data-img="Gameurxxx7.png">
       <img src="Gameurxxx7.png" alt="Gameurxxx7">
       <div class="image-title">Gameurxxx7</div>
       <div class="image-price">100M 💰</div>
     </div>
-    <div class="image-card glow-Rare" data-title="MELBKLIFE" data-rarity="Rare" data-price="100M" data-bonus="5M$/s" data-img="Boxeur.png">
+    <div class="image-card glow-Rare" data-title="MELBKLIFE" data-rarity="Secret" data-price="100M" data-bonus="5M$/s" data-img="Boxeur.png">
       <img src="MELBKLIFE.png" alt="MELBKLIFE">
       <div class="image-title">MELBKLIFE</div>
       <div class="image-price">100M 💰</div>
