Update image-card data-img attribute for MELBKLIFE

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="image-title">Gameurxxx7</div>
       <div class="image-price">100M 💰</div>
     </div>
-    <div class="image-card glow-Rare" data-title="MELBKLIFE" data-rarity="Secret" data-price="100M" data-bonus="5M$/s" data-img="Boxeur.png">
+    <div class="image-card glow-Rare" data-title="MELBKLIFE" data-rarity="Secret" data-price="100M" data-bonus="5M$/s" data-img="MELBKLIFE.png">
       <img src="MELBKLIFE.png" alt="MELBKLIFE">
       <div class="image-title">MELBKLIFE</div>
       <div class="image-price">100M 💰</div>
