--- a/index.html
+++ b/index.html
@@ -4,477 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>I AM A COWBOY 🔥</title>
+  <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;600;700&display=swap');
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-      color: #fff;
-      overflow-x: hidden;
-      font-family: 'Poppins', sans-serif;
-      min-height: 100vh;
-    }
-
-    /* Particles Background */
-    #particles-js {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
-
-    /* Header avec effet néon */
-    .header {
-      text-align: center;
-      padding: 40px 20px 20px;
-      position: relative;
-      z-index: 2;
-    }
-
-    #mainTitle {
-      font-family: 'Orbitron', sans-serif;
-      font-size: clamp(2.5rem, 8vw, 5rem);
-      font-weight: 900;
-      background: linear-gradient(45deg, #ff006e, #8338ec, #3a86ff, #06ffa5);
-      background-size: 300% 300%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      animation: gradientShift 4s ease infinite, float 3s ease-in-out infinite;
-      text-shadow: 0 0 80px rgba(131, 56, 236, 0.5);
-      letter-spacing: 3px;
-      position: relative;
-    }
-
-    #mainTitle::before {
-      content: 'I AM A COWBOY 🔥';
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(45deg, #ff006e, #8338ec, #3a86ff, #06ffa5);
-      background-size: 300% 300%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      filter: blur(20px);
-      opacity: 0.5;
-      z-index: -1;
-      animation: gradientShift 4s ease infinite;
-    }
-
-    @keyframes gradientShift {
-      0%, 100% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0px); }
-      50% { transform: translateY(-15px); }
-    }
-
-    .subtitle {
-      font-size: 1.2rem;
-      margin-top: 10px;
-      opacity: 0.8;
-      font-weight: 300;
-      letter-spacing: 2px;
-    }
-
-    /* Barre de recherche stylée */
-    .search-container {
-      text-align: center;
-      margin: 30px 0;
-      padding: 0 20px;
-    }
-
-    #searchBar {
-      padding: 15px 25px;
-      border-radius: 50px;
-      border: 2px solid transparent;
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      font-size: 1rem;
-      width: min(400px, 90%);
-      color: #fff;
-      transition: all 0.3s ease;
-      box-shadow: 0 8px 32px rgba(131, 56, 236, 0.2);
-    }
-
-    #searchBar::placeholder {
-      color: rgba(255, 255, 255, 0.5);
-    }
-
-    #searchBar:focus {
-      outline: none;
-      border: 2px solid #8338ec;
-      box-shadow: 0 8px 32px rgba(131, 56, 236, 0.5), 0 0 20px rgba(131, 56, 236, 0.3);
-      transform: scale(1.02);
-    }
-
-    /* Boutons de tri modernes */
-    .sort-buttons {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      flex-wrap: wrap;
-      margin: 30px 20px;
-    }
-
-    .sort-buttons button {
-      padding: 12px 30px;
-      border-radius: 50px;
-      border: 2px solid rgba(255, 255, 255, 0.1);
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(10px);
-      color: #fff;
-      cursor: pointer;
-      font-weight: 600;
-      font-size: 0.95rem;
-      transition: all 0.3s ease;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .sort-buttons button::before {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 0;
-      height: 0;
-      border-radius: 50%;
-      background: rgba(131, 56, 236, 0.3);
-      transform: translate(-50%, -50%);
-      transition: width 0.5s, height 0.5s;
-    }
-
-    .sort-buttons button:hover::before {
-      width: 300px;
-      height: 300px;
-    }
-
-    .sort-buttons button:hover {
-      border-color: #8338ec;
-      box-shadow: 0 8px 32px rgba(131, 56, 236, 0.4);
-      transform: translateY(-3px);
-    }
-
-    .sort-buttons button span {
-      position: relative;
-      z-index: 1;
-    }
-
-    /* Container des cartes avec grille moderne */
-    .images-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      gap: 30px;
-      padding: 40px 20px;
-      max-width: 1400px;
-      margin: 0 auto;
-    }
-
-    /* Cartes ultra stylées */
-    .image-card {
-      position: relative;
-      border-radius: 20px;
-      background: rgba(255, 255, 255, 0.03);
-      backdrop-filter: blur(10px);
-      padding: 20px;
-      cursor: pointer;
-      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-      overflow: hidden;
-      border: 2px solid transparent;
-    }
-
-    .image-card::before {
-      content: '';
-      position: absolute;
-      top: -2px;
-      left: -2px;
-      right: -2px;
-      bottom: -2px;
-      border-radius: 20px;
-      padding: 2px;
-      background: linear-gradient(45deg, transparent, transparent);
-      -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-      -webkit-mask-composite: xor;
-      mask-composite: exclude;
-      opacity: 0;
-      transition: opacity 0.3s;
-      z-index: -1;
-    }
-
-    .image-card:hover {
-      transform: translateY(-10px) scale(1.05);
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
-    }
-
-    .image-card:hover::before {
-      opacity: 1;
-    }
-
-    /* Rareté glows ultra améliorés */
-    .glow-Commun {
-      box-shadow: 0 0 30px rgba(46, 204, 113, 0.3), inset 0 0 20px rgba(46, 204, 113, 0.1);
-    }
-    .glow-Commun::before {
-      background: linear-gradient(45deg, #2ecc71, #27ae60, #2ecc71);
-    }
-    .glow-Commun:hover {
-      box-shadow: 0 0 50px rgba(46, 204, 113, 0.6), 0 20px 60px rgba(0, 0, 0, 0.5);
-    }
-
-    .glow-UnCommun {
-      box-shadow: 0 0 30px rgba(142, 68, 173, 0.3), inset 0 0 20px rgba(142, 68, 173, 0.1);
-    }
-    .glow-UnCommun::before {
-      background: linear-gradient(45deg, #8e44ad, #9b59b6, #8e44ad);
-    }
-    .glow-UnCommun:hover {
-      box-shadow: 0 0 50px rgba(142, 68, 173, 0.6), 0 20px 60px rgba(0, 0, 0, 0.5);
-    }
-
-    .glow-Rare {
-      box-shadow: 0 0 30px rgba(52, 152, 219, 0.3), inset 0 0 20px rgba(52, 152, 219, 0.1);
-    }
-    .glow-Rare::before {
-      background: linear-gradient(45deg, #3498db, #2980b9, #3498db);
-    }
-    .glow-Rare:hover {
-      box-shadow: 0 0 50px rgba(52, 152, 219, 0.6), 0 20px 60px rgba(0, 0, 0, 0.5);
-    }
-
-    .glow-Legendaire {
-      box-shadow: 0 0 30px rgba(255, 215, 0, 0.4), inset 0 0 20px rgba(255, 215, 0, 0.1);
-    }
-    .glow-Legendaire::before {
-      background: linear-gradient(45deg, #FFD700, #FFA500, #FFD700);
-    }
-    .glow-Legendaire:hover {
-      box-shadow: 0 0 60px rgba(255, 215, 0, 0.8), 0 20px 60px rgba(0, 0, 0, 0.5);
-    }
-
-    .glow-Mythique {
-      box-shadow: 0 0 30px rgba(255, 102, 204, 0.4), inset 0 0 20px rgba(255, 102, 204, 0.1);
-    }
-    .glow-Mythique::before {
-      background: linear-gradient(45deg, #ff66cc, #ff1493, #ff66cc);
-    }
-    .glow-Mythique:hover {
-      box-shadow: 0 0 60px rgba(255, 102, 204, 0.8), 0 20px 60px rgba(0, 0, 0, 0.5);
-    }
-
-    .glow-Secret {
-      box-shadow: 0 0 40px rgba(127, 140, 141, 0.5), inset 0 0 20px rgba(127, 140, 141, 0.2);
-      animation: secretPulse 2s ease-in-out infinite;
-    }
-    .glow-Secret::before {
-      background: linear-gradient(45deg, #7f8c8d, #95a5a6, #bdc3c7, #7f8c8d);
-      background-size: 300% 300%;
-      animation: gradientShift 3s ease infinite;
-    }
-    .glow-Secret:hover {
-      box-shadow: 0 0 80px rgba(127, 140, 141, 1), 0 20px 60px rgba(0, 0, 0, 0.5);
-    }
-
-    @keyframes secretPulse {
-      0%, 100% { box-shadow: 0 0 40px rgba(127, 140, 141, 0.5); }
-      50% { box-shadow: 0 0 60px rgba(127, 140, 141, 0.8); }
-    }
-
-    .image-card img {
-      width: 100%;
-      height: 180px;
-      border-radius: 15px;
-      object-fit: cover;
-      transition: transform 0.4s ease;
-      filter: brightness(0.9);
-    }
-
-    .image-card:hover img {
-      transform: scale(1.1);
-      filter: brightness(1.1);
-    }
-
-    .image-title {
-      margin-top: 15px;
-      font-weight: 700;
-      font-size: 1.1rem;
-      text-align: center;
-      text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-    }
-
-    .image-price {
-      margin-top: 8px;
-      text-align: center;
-      font-weight: 600;
-      font-size: 1.1rem;
-      color: #06ffa5;
-      text-shadow: 0 0 10px rgba(6, 255, 165, 0.5);
-    }
-
-    /* Popup ultra moderne */
-    .popup {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(0.8);
-      background: rgba(0, 0, 0, 0.95);
-      backdrop-filter: blur(20px);
-      padding: 40px;
-      border-radius: 30px;
-      box-shadow: 0 0 100px rgba(131, 56, 236, 0.5);
-      z-index: 1000;
-      width: min(450px, 90%);
-      border: 2px solid rgba(131, 56, 236, 0.3);
-      animation: popupAppear 0.3s ease forwards;
-    }
-
-    .popup.show {
-      display: block;
-    }
-
-    @keyframes popupAppear {
-      to {
-        transform: translate(-50%, -50%) scale(1);
-      }
-    }
-
-    .popup::before {
-      content: '';
-      position: absolute;
-      top: -2px;
-      left: -2px;
-      right: -2px;
-      bottom: -2px;
-      background: linear-gradient(45deg, #ff006e, #8338ec, #3a86ff, #06ffa5);
-      border-radius: 30px;
-      z-index: -1;
-      opacity: 0.5;
-      filter: blur(20px);
-    }
-
-    #popupClose {
-      position: absolute;
-      top: 15px;
-      right: 20px;
-      font-size: 2rem;
-      cursor: pointer;
-      color: #fff;
-      transition: transform 0.2s, color 0.2s;
-      z-index: 10;
-    }
-
-    #popupClose:hover {
-      transform: rotate(90deg);
-      color: #ff006e;
-    }
-
-    .popup img {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-      border-radius: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
-    }
-
-    .popup h2 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 1.8rem;
-      margin-bottom: 15px;
-      text-align: center;
-      background: linear-gradient(45deg, #06ffa5, #3a86ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-
-    .popup p {
-      font-size: 1.1rem;
-      margin: 10px 0;
-      text-align: center;
-      font-weight: 500;
-    }
-
-    #popupRarity {
-      font-size: 1.3rem;
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-    }
-
-    #priceText {
-      font-size: 1.5rem;
-      font-weight: 700;
-    }
-
-    #popupBonus {
-      font-size: 1.2rem;
-      margin-top: 15px;
-    }
-
-    /* Footer moderne */
-    .footer {
-      text-align: center;
-      padding: 40px 20px;
-      font-size: 0.9rem;
-      color: rgba(255, 255, 255, 0.5);
-      border-top: 1px solid rgba(255, 255, 255, 0.1);
-      margin-top: 60px;
-    }
-
-    /* Overlay pour popup */
-    .popup-overlay {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      backdrop-filter: blur(5px);
-      z-index: 999;
-    }
-
-    .popup-overlay.show {
-      display: block;
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      .images-container {
-        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-        gap: 20px;
-        padding: 20px 10px;
-      }
-
-      .image-card img {
-        height: 150px;
-      }
-
-      .sort-buttons {
-        gap: 10px;
-      }
-
-      .sort-buttons button {
-        padding: 10px 20px;
-        font-size: 0.85rem;
-      }
-    }
-  </style>
 </head>
 <body>
   <div id="particles-js"></div>
@@ -607,77 +138,6 @@
     © 2025 I AM A COWBOY - Tous droits réservés
   </div>
 
-  <script>
-    // Particles.js configuration
-    particlesJS("particles-js", {
-      "particles": {
-        "number": {
-          "value": 120,
-          "density": {
-            "enable": true,
-            "value_area": 1500
-          }
-        },
-        "color": {
-          "value": ["#2ecc71", "#8e44ad", "#3498db", "#FFD700", "#ff66cc", "#7f8c8d"]
-        },
-        "shape": {
-          "type": "circle"
-        },
-        "opacity": {
-          "value": 0.7,
-          "random": true
-        },
-        "size": {
-          "value": 4,
-          "random": true
-        },
-        "line_linked": {
-          "enable": true,
-          "distance": 150,
-          "color": "#ffffff",
-          "opacity": 0.4,
-          "width": 1
-        },
-        "move": {
-          "enable": true,
-          "speed": 2,
-          "direction": "none",
-          "random": false,
-          "straight": false,
-          "out_mode": "out"
-        }
-      },
-      "interactivity": {
-        "detect_on": "canvas",
-        "events": {
-          "onhover": {
-            "enable": true,
-            "mode": "grab"
-          },
-          "onclick": {
-            "enable": false
-          }
-        },
-        "modes": {
-          "grab": {
-            "distance": 200,
-            "line_linked": {
-              "opacity": 0.8
-            }
-          }
-        }
-      },
-      "retina_detect": true
-    });
-
-    // Variables
-    const searchBar = document.getElementById('searchBar');
-    const imageCards = document.querySelectorAll('.image-card');
-    const sortRarity = document.getElementById('sortRarity');
-    const sortPriceAsc = document.getElementById('sortPriceAsc');
-    const sortPriceDesc = document.getElementById('sortPriceDesc');
-    const popup = document.getElementById('popup');
-    const popupOverlay = document.getElementById('popupOverlay');
-    const popupClose = document.getElementById('popupClose');
-    const pop
+  <script src="script.js"></script>
+</body>
+</html>
