--- a/index.html
+++ b/index.html
@@ -9,24 +9,21 @@
 </head>
 <body>
   <div id="particles-js"></div>
-  <div class="popup-overlay" id="popupOverlay"></div>
 
-  <div class="header">
-    <h1 id="mainTitle">I AM A COWBOY 🔥</h1>
-    <p class="subtitle">COLLECTION EXCLUSIVE</p>
-  </div>
+  <h1 id="mainTitle">I AM A COWBOY 🔥</h1>
 
   <div class="search-container">
-    <input type="text" placeholder="🔍 Rechercher un personnage..." id="searchBar">
+    <input type="text" placeholder="Recherche... 🔍" id="searchBar">
   </div>
 
   <div class="sort-buttons">
-    <button id="sortRarity"><span>✨ Trier par Rareté</span></button>
-    <button id="sortPriceAsc"><span>💰 Prix Croissant</span></button>
-    <button id="sortPriceDesc"><span>💎 Prix Décroissant</span></button>
+    <button id="sortRarity">Trier par rareté</button>
+    <button id="sortPriceAsc">Prix croissant</button>
+    <button id="sortPriceDesc">Prix décroissant</button>
   </div>
 
   <div class="images-container">
+    <!-- Toutes les cartes -->
     <div class="image-card glow-Secret" data-title="Gameurxxx7" data-rarity="Secret" data-price="100000000" data-bonus="5M$/s" data-img="Gameurxxx7.png">
       <img src="Gameurxxx7.png" alt="Gameurxxx7">
       <div class="image-title">Gameurxxx7</div>
@@ -124,7 +121,8 @@
     </div>
   </div>
 
-  <div class="popup" id="popup">
+  <!-- Popup -->
+  <div id="popup" class="popup">
     <span id="popupClose">&times;</span>
     <img id="popupImage" src="" alt="">
     <h2 id="popupTitle"></h2>
@@ -134,8 +132,7 @@
   </div>
 
   <div class="footer">
-    Développé par Zaynox pour I AM A COWBOY de Mangeur2nutella2 et MELBKLIFE et Nath_vdk<br>
-    © 2025 I AM A COWBOY - Tous droits réservés
+    Développé par Zaynox pour I AM A COWBOY de Mangeur2nutella2 et MELBKLIFE et Nath_vdk • © 2025 I AM A COWBOY
   </div>
 
   <script src="script.js"></script>
