--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
 </head>
 <body>
   <div id="particles-js"></div>
+  <div class="popup-overlay" id="popupOverlay"></div>
 
-  <h1 id="mainTitle">I AM A COWBOY 🔥</h1>
+  <div class="header">
+    <h1 id="mainTitle">I AM A COWBOY 🔥</h1>
+    <p class="subtitle">COLLECTION EXCLUSIVE</p>
+  </div>
 
   <div class="search-container">
-    <input type="text" placeholder="Recherche... 🔍" id="searchBar">
+    <input type="text" placeholder="🔍 Rechercher un personnage..." id="searchBar">
   </div>
 
   <div class="sort-buttons">
-    <button id="sortRarity">Trier par rareté</button>
-    <button id="sortPriceAsc">Prix croissant</button>
-    <button id="sortPriceDesc">Prix décroissant</button>
+    <button id="sortRarity"><span>✨ Trier par Rareté</span></button>
+    <button id="sortPriceAsc"><span>💰 Prix Croissant</span></button>
+    <button id="sortPriceDesc"><span>💎 Prix Décroissant</span></button>
   </div>
 
   <div class="images-container">
-    <!-- Toutes les cartes -->
     <div class="image-card glow-Secret" data-title="Gameurxxx7" data-rarity="Secret" data-price="100000000" data-bonus="5M$/s" data-img="Gameurxxx7.png">
       <img src="Gameurxxx7.png" alt="Gameurxxx7">
       <div class="image-title">Gameurxxx7</div>
@@ -121,8 +124,7 @@
     </div>
   </div>
 
-  <!-- Popup -->
-  <div id="popup" class="popup">
+  <div class="popup" id="popup">
     <span id="popupClose">&times;</span>
     <img id="popupImage" src="" alt="">
     <h2 id="popupTitle"></h2>
@@ -132,7 +134,8 @@
   </div>
 
   <div class="footer">
-    Développé par Zaynox pour I AM A COWBOY de Mangeur2nutella2 et MELBKLIFE et Nath_vdk • © 2025 I AM A COWBOY
+    Développé par Zaynox pour I AM A COWBOY de Mangeur2nutella2 et MELBKLIFE et Nath_vdk<br>
+    © 2025 I AM A COWBOY - Tous droits réservés
   </div>
 
   <script src="script.js"></script>
