--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <div class="image-title">MELBKLIFE</div>
       <div class="image-price">100M 💰</div>
     </div>
-    <div class="image-card glow-Rare" data-title="Noob Ninja" data-rarity="Rare" data-price="12000" data-bonus="95$/s" data-img="Ninja.PNG">
-      <img src="Ninja.PNG" alt="Noob Ninja">
-      <div class="image-title">Noob Ninja</div>
-      <div class="image-price">12 000 💰</div>
+    <div class="image-card glow-Rare" data-title="Nath_vdk" data-rarity="Secret" data-price="100000000" data-bonus="5M$/s" data-img="Nath_vdk.PNG">
+      <img src="Nath_vdk" alt="Nath_vdk">
+      <div class="image-title">Nath_vdk</div>
+      <div class="image-price">100M 💰</div>
     </div>
     <div class="image-card glow-Commun" data-title="Agent Noob" data-rarity="Commun" data-price="1" data-bonus="1$/s" data-img="Agent.PNG">
       <img src="Agent.PNG" alt="Agent Noob">
