--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <div class="image-title">MELBKLIFE</div>
       <div class="image-price">100M 💰</div>
     </div>
-    <div class="image-card glow-Rare" data-title="Nath_vdk" data-rarity="Secret" data-price="100000000" data-bonus="5M$/s" data-img="Nath_vdk.PNG">
-      <img src="Nath_vdk" alt="Nath_vdk">
+    <div class="image-card glow-Rare" data-title="Nath_vdk" data-rarity="Secret" data-price="100000000" data-bonus="5M$/s" data-img="Nath_vdk.png">
+      <img src="Nath_vdk.png" alt="Nath_vdk">
       <div class="image-title">Nath_vdk</div>
       <div class="image-price">100M 💰</div>
     </div>
