--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
       <div class="image-title">Nath_vdk</div>
       <div class="image-price">100M 💰</div>
     </div>
+    <div class="image-card glow-Rare" data-title="CowBoy Killer" data-rarity="Mythique" data-price="2000000" data-bonus="500K$/s" data-img="CowBoy Killer.png">
+      <img src="CowBoy Killer.png" alt="Nath_vdk">
+      <div class="image-title">CowBoy Killer</div>
+      <div class="image-price">2M 💰</div>
+    </div>
   </div>
 
   <div class="popup" id="popup">
